k8s/tr.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips-deployment
  namespace: api
  labels:
    deploy: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - image: ozgursunexpress.azurecr.io/tripinsights/trips:1.0
        imagePullPolicy: Always
        name: trips
        livenessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /api/trips/healthcheck
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
          - containerPort: 80
            name: http
            protocol: TCP
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/secrets"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: api
spec:
  type: LoadBalancer
  selector:
    app: trips
  ports:
    - protocol: TCP
      name: trips-http
      port: 80
      targetPort: 80
